# CMake_for_Dummies_code

./: README.md  sample_makefile
hypot/: CMakeLists.txt  Makefile  main.cpp
sqrt/: CMakeLists.txt  Makefile  README.md  clsqrt.cpp  hello_world.cpp  sqrt-config.cmake.in  sqrt.cpp  sqrt.h
sqrt/test/: CMakeLists.txt  test.cpp  test.h  test_runner.cpp
